Feat/implement account coin (#79)
* feat: implemented /account/coins

* fixing the action

* fixing the action && refactoring while waiting

* detached flag

* added txInputEntity

* renamed docker files, preparing for merge